--- a/index.html
+++ b/index.html
@@ -89,5 +89,7 @@
         5. Pour un problème non urgent, contacter helpformyserveur@gmail.com
     </button>
 </div>
+        <img src="https://visitor-badge.laobi.icu/badge?page_id=chatl8121-web.Serveur_Minecraft_Site" alt="Compteur de visites">
+
 </body>
 </html>
