--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
         });
         </script>
         <style>
-        #titre {
+        body{
+            background-color: violet;
+        }
+            #titre {
             font-family: Arial, sans-serif;
             color: #2c3e50;
             font-size: 2.5em;
